# inkbox-html-lib-rs

./: .gitignore  Cargo.toml  README.md  clippy.toml  deploy.sh  example.html  libreader-rs.h
examples/: example-selection-html.html  example-selection.html  example.html
examples/1/: selection_1.html  selection_2.html
examples/2/: main_page.html  next_page.html  previous_page.html  selection_main.html  selection_next.html  selection_previous.html
prototypes/: not-working-highlighting-bytes.rs  not-working-highlighting.rs
src/: highlighting.rs  lib.rs  main.rs
tests/: highlighting_tests.rs
