[package]
name = "reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
visdom = "0.5.9"
html-escape = "0.2.13"
regex = "1.5"

[lib]
crate-type = ["staticlib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"   # remove this for some debug info
